[package]
name = "wasm-lib"
version = "0.1.0"
authors = ["ZhouyiGuan <zhouyi.guan@zd-automotive.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
wee_alloc_opt = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.84"
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
cfg-if = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
